2004-01-15  Nikolai Weibull <ruby-gnome2-devel-en-list@pcppopper.org>

	* providers/sqlite/gda-sqlite-provider.c
	(gda_sqlite_provider_open_connection): set the object's private data
	before executing any command.

2004-01-12  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #131252

	* providers/odbc/utils.c (gda_odbc_emit_error): style fixes.

2004-01-12  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #131251

	* providers/odbc/gda-odbc-provider.c
	(gda_odbc_provider_open_connection): set ODBC connection to read-only
	if GdaConnection is set so.

2004-01-10  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #131046

	* providers/odbc/gda-odbc-provider.c
	(gda_odbc_provider_open_connection): retrieve the DBMS version, not
	the driver version.

2004-01-10  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #130838

	* providers/odbc/gda-odbc-provider.c (process_sql_commands): changed
	to get the SQL command as a string.
	(gda_odbc_provider_execute_command): added support for TABLE commands.
	
2004-01-10  J.H.M. Dassen (Ray) <jdassen@debian.org>

	http://bugs.debian.org/226560

	* providers/sqlite/gda-sqlite-provider.c: #include <gda-util.h> to
	have gda_type_to_string declared. This fixes pointer/integer issues on
	64-bit architectures, in particular IA64.

2004-01-09  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #130945

	* providers/odbc/gda-odbc-provider.c (process_sql_commands): use
	correct counter.

2004-01-09  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #130938

	* providers/odbc/gda-odbc-provider.c: added support for NAMESPACES.

2004-01-02  Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-util.c (gda_file_save): added O_TRUNC flag.

2003-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-command.c (gda_command_copy): dont use C99.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_get_data_source_list): fixed
	documentation typo.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>
